some new functionality, minor improvements